+ new attribute 'quotedStrings' on DataWritter component - all written data can be quoted
+ new attributes for SystemExecute component - workersTimeout, charset
+ new attribute 'Collator sensitivity' on DataRecordMetadata
+ Joda date formatter is now default formatter (java formatter is still available with prefix "java:" in format string)

REL 2-9-2
---------
+ Example projects using DB migrated to Derby - easy setup for newbies
+ FastSort NPE fix with non-nullable record and no default value
+ fixed XLSWriter long sheet names issue
+ fixed occasional NPE in DataIntersection
+ fixed DB2DataWriter not finishing in pipe mode
+ SQLite support improved
+ fixed ExtSort sorting composed key with nulls incorrectly
+ fixed fields delimited by "\n" - doubling backslash
+ CloverDataReader is now able to read without index file
+ fixed Reading timestamps from XLS sheets

  

REL 2-9-1
---------
+ JMS Writer - Fix of exception propagation during sending of JMS message
+ fixed HashPartition function giving negative port numbers occasionally
+ improved SFTP speed


REL 2-9-0
---------
Features:
+ XLS reading - formatted value can be obtained as a String type field if needed
+ Tracking - in final tracking summary average Rec/s and KB/s is displayed
+ LDAPWriter - possibility of changing/disabling multiseparator
+ CTL transformation has now PROJECT_DIR available
+ new AbstractPartitionFunction for Java writen PartitionFunction

Fixed:
+ PostgreSqlDataWriter and OracleDataWriter - NullPointerException fix
+ Reading of zipped MS Excel files


REL 2-8-1
---------
Features:
+ DBInputTable - incremental file is created automatically when properly configured
+ AspellLookupTable can now return edit distance
+ DBOutputTable has new attribute "Atomic SQL query" for ensuring that SQL query rollbacks on error
+ SQL query in DBExecute can have comments inside
+ Bundled jTDS for direct support for Microsoft SQL Server and Sybase
 
Fixed:
+ Fixed CPU info tracking for multithreaded components